# machine_learning_exam

./: .gitignore  Clara_New.ipynb  Clara_notebook.ipynb  Jakob_notebook.ipynb  Jakob_notebook_backup.ipynb  Jakob_notebook_darts.ipynb  Jakob_notebook_tsfresh.ipynb  Main_notebook.ipynb  Niklas_notebook.ipynb  Old_Long_notebook.ipynb  Short_notebook_CatBoost.ipynb  Short_notebook_LightGBM.ipynb  cat_boost_1hour.csv  pyproject.toml
.ipynb_checkpoints/: Main-checkpoint.ipynb  Main_notebook-checkpoint.ipynb
data/: read_files.ipynb
predictions/: advanced_best_predictions.parquet  advanced_blended_predictions.parquet  ari_15min.csv  ari_1hour.csv  cat_boost_1hour.csv  light_gbm_1hour.csv  prophet_15min.csv  prophet_1hour.csv  rnn_pca_1hour.csv  rnn_pca_1hourLessEpochs.csv  simple_best_predictions.parquet  simple_blended_predictions.parquet  simple_stacked_predictions.parquet  xbg_15min.csv  xbg_1hour.csv  xbg_pca_1hour.csv  xgb_pred_15min.csv  xgb_pred_1hour.csv
