[tool.poetry]
name = "machine-learning-exam"
version = "0.1.0"
description = ""
authors = ["Jakob Cetti Hansen <jkbch@coga.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.x"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
kaleido = "0.2.1"
pycaret = {extras = ["full"], version = "^3.1.0"}
pandas = {version = "^1.3.0", extras = ["parquet"]}
darts = "^0.26.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
