[tool.poetry]
name = "machine learning exam"
version = "0.1.0"
description = ""
authors = ["Jakob Cetti Hansen <jkbch@coga.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
darts = "^0.26.0"
jupyter = "^1.0.0"
torch = {version = "2.1.0", source="torch"} # torch = {version = ">=2.0.0, !=2.0.1, !=2.1.0"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
